--- a/package.json
+++ b/package.json
@@ -1,37 +1,43 @@
 {
-  "name": "wildrtc",
-  "version": "0.1.3",
-  "description": "webrtc with wilddog support",
-  "main": "src/WildRTC.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/WildDogTeam/lib-js-wildRTC.git"
-  },
-  "keywords": [
-    "webrtc",
-    "wilddog",
-    "realtime",
-    "p2p"
-  ],
-  "author": "wilddog",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/WildDogTeam/lib-js-wildRTC/issues"
-  },
-  "homepage": "https://github.com/WildDogTeam/lib-js-wildRTC.git",
-  "devDependencies": {
-    "browserify": "^13.0.0",
-    "events": "^1.1.0",
-    "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-connect": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.3"
-  },
-  "dependencies": {
-    "wild-peerconnection": "^1.0.6"
-  }
+    "name": "wildrtc",
+    "version": "0.1.3",
+    "description": "webrtc with wilddog support",
+    "main": "src/WildRTC.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/WildDogTeam/lib-js-wildRTC.git"
+    },
+    "keywords": [
+        "webrtc",
+        "wilddog",
+        "realtime",
+        "p2p"
+    ],
+    "author": "wilddog",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/WildDogTeam/lib-js-wildRTC/issues"
+    },
+    "homepage": "https://github.com/WildDogTeam/lib-js-wildRTC.git",
+    "devDependencies": {
+        "browserify": "^13.0.0",
+        "events": "^1.1.0",
+        "gulp": "^3.9.1",
+        "gulp-browserify": "^0.5.1",
+        "gulp-connect": "^3.1.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-uglify": "^1.5.3"
+    },
+    "dependencies": {
+        "wild-peerconnection": "^1.0.6",
+        "kurento-jsonrpc":"git+https://github.com/dongkai1993/kurento-jsonrpc-js.git",
+        "freeice": "^2.1.2",
+        "inherits": "^2.0.1",
+        "merge": "^1.2.0",
+        "ua-parser-js": "^0.7.7",
+        "hark": "1.1.3"
+    }
 }
