--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "hark": "1.1.3",
     "inherits": "^2.0.1",
     "kurento-jsonrpc": "git+https://github.com/dongkai1993/kurento-jsonrpc-js.git",
+    "kurento-utils": "^6.2.0",
     "merge": "^1.2.0",
     "ua-parser-js": "^0.7.7",
+    "uuid": "^2.0.1",
     "wild-peerconnection": "^1.0.6",
     "wolfy87-eventemitter": "^4.3.0"
   },
